--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.20.5",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
