--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.0.1",
     "framer-motion": "^12.20.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
