--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - DB_USERNAME=postgres
       - DB_PASSWORD=postgres
       - DB_NAME=blog
+      - BASIC_AUTH_USER=admin
+      - BASIC_AUTH_PASSWORD=password123
     depends_on:
       - postgres
 
